--- a/franceShop.html
+++ b/franceShop.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
-  <title>Pháp SHOP</title>
+  <title>FRANCE SHOP</title>
   <link rel="icon" href="https://o.remove.bg/downloads/fb99e4ea-2079-489a-b22c-9c2f621a280f/pngtree-hand-drawn-flat-wind-user-avatar-icon-png-image_4492039-removebg-preview.png">
   <link rel="stylesheet" href="franceShop.css">
   <link rel="stylesheet" href="fontawesome/css/all.css">
